<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:text="@string/welcome_to_freshsaver"
        android:textColor="@color/text2_color"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/your_food_freshness_ally_easily_monitor_groceries_track_expiration_dates_and_discover_your_dietary_patterns_say_hello_to_a_fresher_waste_free_kitchen_experience"
        android:textAlignment="center"
        android:textColor="@color/text2_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/accent_color"
        android:text="@string/next"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>